Added Nr Victims column

--- a/gun-violence.ipynb
+++ b/gun-violence.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 77,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:00:51.242678Z",
-     "start_time": "2019-08-21T16:00:51.234936Z"
+     "end_time": "2019-08-22T18:41:35.626146Z",
+     "start_time": "2019-08-22T18:41:35.616162Z"
     }
    },
    "outputs": [],
@@ -24,7 +24,6 @@
     "import re\n",
     "import Levenshtein as lev\n",
     "import random\n",
-    "import copy\n",
     "\n",
     "from datetime import datetime as dt\n",
     "from functools import reduce\n",
@@ -35,11 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:00:51.256369Z",
-     "start_time": "2019-08-21T16:00:51.248281Z"
+     "end_time": "2019-08-22T18:36:51.911260Z",
+     "start_time": "2019-08-22T18:36:51.903960Z"
+    },
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
     }
    },
    "outputs": [],
@@ -51,30 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 78,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-20T23:47:40.565588Z",
-     "start_time": "2019-08-20T23:47:39.440538Z"
-    },
-    "deletable": false,
-    "editable": false,
-    "run_control": {
-     "frozen": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%load_ext Cython"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-21T16:00:55.244342Z",
-     "start_time": "2019-08-21T16:00:51.264708Z"
+     "end_time": "2019-08-22T18:41:49.243296Z",
+     "start_time": "2019-08-22T18:41:35.629418Z"
     },
     "code_folding": []
    },
@@ -13276,11 +13261,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 79,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:00:55.523317Z",
-     "start_time": "2019-08-21T16:00:55.247025Z"
+     "end_time": "2019-08-22T18:41:49.740214Z",
+     "start_time": "2019-08-22T18:41:49.320975Z"
     }
    },
    "outputs": [],
@@ -13293,11 +13278,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 80,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:00:55.904504Z",
-     "start_time": "2019-08-21T16:00:55.525376Z"
+     "end_time": "2019-08-22T18:41:50.299995Z",
+     "start_time": "2019-08-22T18:41:49.744413Z"
     },
     "code_folding": [
      1
@@ -13313,11 +13298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 81,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:00:56.104200Z",
-     "start_time": "2019-08-21T16:00:55.906415Z"
+     "end_time": "2019-08-22T18:41:50.539644Z",
+     "start_time": "2019-08-22T18:41:50.303795Z"
     }
    },
    "outputs": [],
@@ -13331,11 +13316,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 82,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:00:56.159313Z",
-     "start_time": "2019-08-21T16:00:56.106097Z"
+     "end_time": "2019-08-22T18:41:50.600058Z",
+     "start_time": "2019-08-22T18:41:50.541936Z"
     },
     "code_folding": [
      1
@@ -13352,11 +13337,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 83,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:00:56.182223Z",
-     "start_time": "2019-08-21T16:00:56.162978Z"
+     "end_time": "2019-08-22T18:41:50.607856Z",
+     "start_time": "2019-08-22T18:41:50.602079Z"
     },
     "code_folding": [
      1
@@ -13385,11 +13370,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 84,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:00:56.194308Z",
-     "start_time": "2019-08-21T16:00:56.187224Z"
+     "end_time": "2019-08-22T18:41:50.615692Z",
+     "start_time": "2019-08-22T18:41:50.611514Z"
     },
     "code_folding": [
      1
@@ -13407,11 +13392,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 85,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:00:56.205858Z",
-     "start_time": "2019-08-21T16:00:56.197866Z"
+     "end_time": "2019-08-22T18:41:50.623810Z",
+     "start_time": "2019-08-22T18:41:50.618857Z"
     },
     "code_folding": [
      1
@@ -13430,11 +13415,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 86,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:01:03.342747Z",
-     "start_time": "2019-08-21T16:00:56.210923Z"
+     "end_time": "2019-08-22T18:42:04.553748Z",
+     "start_time": "2019-08-22T18:41:50.627963Z"
     },
     "code_folding": []
    },
@@ -13453,11 +13438,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 87,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:01:03.354203Z",
-     "start_time": "2019-08-21T16:01:03.344754Z"
+     "end_time": "2019-08-22T18:42:04.582309Z",
+     "start_time": "2019-08-22T18:42:04.557663Z"
     },
     "code_folding": [
      1
@@ -13480,11 +13465,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 88,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:01:03.369430Z",
-     "start_time": "2019-08-21T16:01:03.359924Z"
+     "end_time": "2019-08-22T18:42:04.595504Z",
+     "start_time": "2019-08-22T18:42:04.586925Z"
     },
     "code_folding": [
      1
@@ -13506,11 +13491,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 89,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:01:03.382216Z",
-     "start_time": "2019-08-21T16:01:03.372885Z"
+     "end_time": "2019-08-22T18:42:04.610381Z",
+     "start_time": "2019-08-22T18:42:04.603716Z"
     },
     "code_folding": [
      1
@@ -13529,11 +13514,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 90,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:01:03.388910Z",
-     "start_time": "2019-08-21T16:01:03.384558Z"
+     "end_time": "2019-08-22T18:42:04.629471Z",
+     "start_time": "2019-08-22T18:42:04.619557Z"
     },
     "code_folding": [
      2
@@ -14988,11 +14973,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 91,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:01:30.212252Z",
-     "start_time": "2019-08-21T16:01:03.391452Z"
+     "end_time": "2019-08-22T18:42:37.372976Z",
+     "start_time": "2019-08-22T18:42:04.637184Z"
     }
    },
    "outputs": [],
@@ -15002,11 +14987,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 92,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:01:30.814363Z",
-     "start_time": "2019-08-21T16:01:30.214391Z"
+     "end_time": "2019-08-22T18:42:38.631527Z",
+     "start_time": "2019-08-22T18:42:37.375023Z"
     }
    },
    "outputs": [],
@@ -15016,11 +15001,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 93,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:01:30.823735Z",
-     "start_time": "2019-08-21T16:01:30.816220Z"
+     "end_time": "2019-08-22T18:42:38.650337Z",
+     "start_time": "2019-08-22T18:42:38.634522Z"
     },
     "code_folding": [
      0
@@ -15040,11 +15025,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 94,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:01:30.836493Z",
-     "start_time": "2019-08-21T16:01:30.827173Z"
+     "end_time": "2019-08-22T18:42:38.674408Z",
+     "start_time": "2019-08-22T18:42:38.656856Z"
     },
     "code_folding": [
      0
@@ -15068,11 +15053,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 95,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:02:06.235236Z",
-     "start_time": "2019-08-21T16:01:54.054306Z"
+     "end_time": "2019-08-22T18:42:58.656226Z",
+     "start_time": "2019-08-22T18:42:38.679025Z"
     },
     "scrolled": true
    },
@@ -15084,25 +15069,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 96,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:03:00.438858Z",
-     "start_time": "2019-08-21T16:03:00.271499Z"
+     "end_time": "2019-08-22T18:43:00.388119Z",
+     "start_time": "2019-08-22T18:42:58.660582Z"
     }
    },
    "outputs": [],
    "source": [
-    "del data[\"Participant Type\"]"
+    "def replace_dict(dictionary):\n",
+    "    if pd.notnull(dictionary):\n",
+    "        return len(dictionary)\n",
+    "    else:\n",
+    "        return np.nan\n",
+    "    \n",
+    "data[\"Participant Type\"] = data[\"Participant Type\"].apply(lambda x: replace_dict(x))\n",
+    "data.rename(columns = {\"Participant Type\": \"Nr Victims\"}, inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 97,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:03:44.809462Z",
-     "start_time": "2019-08-21T16:03:43.621485Z"
+     "end_time": "2019-08-22T18:43:01.469906Z",
+     "start_time": "2019-08-22T18:43:00.390179Z"
     }
    },
    "outputs": [],
@@ -15113,11 +15105,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 99,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:05:03.901120Z",
-     "start_time": "2019-08-21T16:05:03.561624Z"
+     "end_time": "2019-08-22T18:43:41.272088Z",
+     "start_time": "2019-08-22T18:43:40.832734Z"
     },
     "code_folding": []
    },
@@ -15150,11 +15142,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 100,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:07:46.796873Z",
-     "start_time": "2019-08-21T16:07:46.792357Z"
+     "end_time": "2019-08-22T18:43:42.220940Z",
+     "start_time": "2019-08-22T18:43:42.213097Z"
     }
    },
    "outputs": [],
@@ -15165,11 +15157,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 101,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:07:48.248536Z",
-     "start_time": "2019-08-21T16:07:48.239189Z"
+     "end_time": "2019-08-22T18:43:42.998760Z",
+     "start_time": "2019-08-22T18:43:42.990939Z"
     }
    },
    "outputs": [],
@@ -15180,37 +15172,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 102,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:07:50.812672Z",
-     "start_time": "2019-08-21T16:07:49.874566Z"
+     "end_time": "2019-08-22T18:43:45.205925Z",
+     "start_time": "2019-08-22T18:43:43.733472Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'int' and 'dict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-102-d8eeec68c934>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcasualties_2013\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0myearly_casualties\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2013\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-101-aaefbe89312a>\u001b[0m in \u001b[0;36myearly_casualties\u001b[0;34m(data, year)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0myearly_casualties\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0myear\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mget_yearly_casualties\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myear\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2013\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-101-aaefbe89312a>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0myearly_casualties\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0myear\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mget_yearly_casualties\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myear\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2013\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-100-c3fc00ab4969>\u001b[0m in \u001b[0;36mget_yearly_casualties\u001b[0;34m(row)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_yearly_casualties\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m24\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'int' and 'dict'"
+     ]
+    }
+   ],
    "source": [
     "casualties_2013 = yearly_casualties(data.values, 2013)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:09:33.553924Z",
-     "start_time": "2019-08-21T16:09:33.547747Z"
+     "end_time": "2019-08-22T18:43:45.212168Z",
+     "start_time": "2019-08-22T18:43:41.901Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total number of mass shootings in 2013: 151\n",
-      "Total number of incidents in 2013: \t278\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Total number of mass shootings in 2013: \" + str(len([nr_casualties for nr_casualties in casualties_2013 if nr_casualties >= 4])))\n",
     "print(\"Total number of incidents in 2013: \\t\" + str(len(casualties_2013)))"
@@ -15218,11 +15216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T16:10:30.720390Z",
-     "start_time": "2019-08-21T16:10:30.319634Z"
+     "end_time": "2019-08-22T18:43:45.215910Z",
+     "start_time": "2019-08-22T18:43:42.680Z"
     }
    },
    "outputs": [],
@@ -15254,6 +15252,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
