--- a/gun-violence.ipynb
+++ b/gun-violence.ipynb
@@ -1074,11 +1074,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 520,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T14:06:23.341857Z",
-     "start_time": "2019-08-24T14:06:23.332999Z"
+     "end_time": "2019-08-24T14:27:27.479713Z",
+     "start_time": "2019-08-24T14:27:27.470324Z"
     },
     "code_folding": [
      1
@@ -1101,11 +1101,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 521,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T13:47:18.164219Z",
-     "start_time": "2019-08-24T13:47:18.139409Z"
+     "end_time": "2019-08-24T14:27:32.005845Z",
+     "start_time": "2019-08-24T14:27:32.000432Z"
     },
     "code_folding": [
      1
@@ -1127,11 +1127,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 522,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T13:47:18.197514Z",
-     "start_time": "2019-08-24T13:47:18.168402Z"
+     "end_time": "2019-08-24T14:27:36.789057Z",
+     "start_time": "2019-08-24T14:27:36.771595Z"
     },
     "code_folding": [
      1
@@ -1150,11 +1150,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 523,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T13:47:18.216816Z",
-     "start_time": "2019-08-24T13:47:18.201407Z"
+     "end_time": "2019-08-24T14:27:40.979295Z",
+     "start_time": "2019-08-24T14:27:40.970695Z"
     },
     "code_folding": [
      1
@@ -2608,36 +2608,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 524,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T13:49:28.042354Z",
-     "start_time": "2019-08-24T13:49:09.461554Z"
+     "end_time": "2019-08-24T14:28:00.147439Z",
+     "start_time": "2019-08-24T14:27:44.619642Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69589a8be69046008b723c2b0a692ec7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='Pandas Apply', max=239678, style=ProgressStyle(description_wi…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO optimize this\n",
     "data['address'] = data['address'].apply(clean_address_string)"
@@ -2645,23 +2623,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 585,
+   "execution_count": 525,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T09:44:40.688009Z",
-     "start_time": "2019-08-23T09:44:39.562526Z"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 586,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-23T09:44:41.111543Z",
-     "start_time": "2019-08-23T09:44:40.690327Z"
+     "end_time": "2019-08-24T14:28:07.063731Z",
+     "start_time": "2019-08-24T14:28:06.701718Z"
     },
     "code_folding": []
    },
@@ -2671,14 +2637,6 @@
      "output_type": "stream",
      "text": [
       "Total number of incidents recorded in 2013: \t278\n",
-      "Total number of incidents recorded in 2014: \t51854\n",
-      "Total number of incidents recorded in 2015: \t53579\n",
-      "Total number of incidents recorded in 2016: \t58763\n",
-      "Total number of incidents recorded in 2017: \t61402\n",
-      "Total number of incidents recorded in 2018: \t13802\n",
-      "-------------------------------------------------------\n",
-      "Total number of incidents recorded: \t\t239678\n",
-      "-------------------------------------------------------\n",
       "Average number of incidents recorded (2014-17): 59850\n"
      ]
     }
@@ -2690,55 +2648,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 587,
+   "execution_count": 530,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T09:44:41.121999Z",
-     "start_time": "2019-08-23T09:44:41.115178Z"
+     "end_time": "2019-08-24T14:30:10.004669Z",
+     "start_time": "2019-08-24T14:30:09.994645Z"
     }
    },
    "outputs": [],
    "source": [
-    "def get_yearly_casualties(row):\n",
-    "    return max(row[data.columns.get_loc(\"n_killed\")] + row[data.columns.get_loc(\"n_injured\")] - row[data.columns.get_loc(\"n_uspects\")], 0)"
+    "def get_yearly_victims(row):\n",
+    "    return max(row[data.columns.get_loc(\"n_killed\")] + row[data.columns.get_loc(\"n_injured\")] - row[data.columns.get_loc(\"n_suspects\")], 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 588,
+   "execution_count": 531,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T09:44:41.136647Z",
-     "start_time": "2019-08-23T09:44:41.131889Z"
+     "end_time": "2019-08-24T14:30:13.857167Z",
+     "start_time": "2019-08-24T14:30:13.848203Z"
     }
    },
    "outputs": [],
    "source": [
-    "def yearly_casualties(data, year):\n",
-    "    return [get_yearly_casualties(data[i]) for i in range(data.shape[0]) if data[i][0].year == 2013]"
+    "def yearly_victims(data, year):\n",
+    "    return [get_yearly_victims(data[i]) for i in range(data.shape[0]) if data[i][0].year == 2013]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 589,
+   "execution_count": 532,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T09:44:42.420926Z",
-     "start_time": "2019-08-23T09:44:41.141427Z"
+     "end_time": "2019-08-24T14:30:18.987923Z",
+     "start_time": "2019-08-24T14:30:17.700237Z"
     }
    },
    "outputs": [],
    "source": [
-    "casualties_2013 = yearly_casualties(data.values, 2013)"
+    "victims_2013 = yearly_victims(data.values, 2013)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 590,
+   "execution_count": 533,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T09:44:42.431934Z",
-     "start_time": "2019-08-23T09:44:42.423004Z"
+     "end_time": "2019-08-24T14:30:39.807217Z",
+     "start_time": "2019-08-24T14:30:39.795238Z"
     }
    },
    "outputs": [
@@ -2752,26 +2710,26 @@
     }
    ],
    "source": [
-    "print(\"Total number of mass shootings in 2013: \" + str(len([nr_casualties for nr_casualties in casualties_2013 if nr_casualties >= 4])))\n",
-    "print(\"Total number of incidents in 2013: \\t\" + str(len(casualties_2013)))"
+    "print(\"Total number of mass shootings in 2013: \" + str(len([nr_victims for nr_victims in victims_2013 if nr_victims >= 4])))\n",
+    "print(\"Total number of incidents in 2013: \\t\" + str(len(victims_2013)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 591,
+   "execution_count": 534,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T09:44:42.607835Z",
-     "start_time": "2019-08-23T09:44:42.435226Z"
+     "end_time": "2019-08-24T14:32:45.343871Z",
+     "start_time": "2019-08-24T14:32:45.202721Z"
     }
    },
    "outputs": [],
    "source": [
     "# Create a mass shooting dataset for further analysis\n",
-    "mass_shootings = data[(data[\"Nr Killed\"] + data[\"Nr Injured\"] - data[\"Nr Suspects\"]) >= 4]\n",
+    "mass_shootings = data[(data[\"n_killed\"] + data[\"n_injured\"] - data[\"n_suspects\"]) >= 4]\n",
     "\n",
     "# Remove 2013 incidents from the dataset\n",
-    "data = data[data[\"Date\"].dt.year != 2013]"
+    "data = data[data[\"date\"].dt.year != 2013]"
    ]
   },
   {
